# teltonika-server

./: .gitignore  Cargo.toml  DEBIAN_PACKAGE_INSTRUCTIONS.md  Dockerfile  LICENSE  README.md  config.json  config.yaml  teltonika-server.service  teltonika-server_0.1.0-1_amd64.deb
debian/: postinst
src/: config.rs  lib.rs  main.rs
src/handlers/: connection.rs  mod.rs
src/models/: connection.rs
src/services/: api_integration.rs  mod.rs  thingsboard.rs
